--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,12 @@
 .main{
-    padding: 20px;
+  padding: 20px;
+}
+.button-upload{
+  color: #ffffff !important;
+}
+.main-img{
+  display: block;
+  width: 60%;
+  margin: auto;
+  padding: 30px;
 }
